--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "compile": "babel --plugins \"transform-runtime\" ./src  --out-dir ./lib",
     "prepublish": "rimraf ./lib && npm run compile",
-    "dev": "DEBUG=weixinbot nodemon lib/wechat.js"
+    "dev": "DEBUG=weixinbot nodemon lib/wechat.js",
+    "start" : "nodemon lib/wechat.js"
   },
   "dependencies": {
     "axios": "^0.15.3",
