--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "compile": "babel --plugins \"transform-runtime\" ./src  --out-dir ./lib",
     "prepublish": "rimraf ./lib && npm run compile",
-    "dev": "DEBUG=weixinbot node lib/wechat.js",
+    "dev": "DEBUG=weixinbot node lib/index.js",
     "start" : "mg start --config ./mongroup.conf",
     "stop" : "mg stop --config ./mongroup.conf",
     "restart" : "mg restart --config ./mongroup.conf",
