--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "compile": "babel --plugins \"transform-runtime\" ./src  --out-dir ./lib",
     "prepublish": "rimraf ./lib && npm run compile",
     "dev": "DEBUG=weixinbot node lib/index.js",
-    "start" : "mg start --config ./mongroup.conf",
-    "stop" : "mg stop --config ./mongroup.conf",
-    "restart" : "mg restart --config ./mongroup.conf",
-    "status" : "mg status --config ./mongroup.conf"
+    "start": "mg start --config ./mongroup.conf",
+    "stop": "mg stop --config ./mongroup.conf",
+    "restart": "mg restart --config ./mongroup.conf",
+    "status": "mg status --config ./mongroup.conf"
   },
   "dependencies": {
     "axios": "^0.15.3",
     "guesslanguage": "^0.2.0",
+    "memory-cache": "0.1.6",
+    "nedb": "1.8.0",
     "rxjs": "^5.0.3",
     "weixinbot": "git+https://github.com/alexayan/WeixinBot.git"
   },
