--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "guesslanguage": "^0.2.0",
     "memory-cache": "0.1.6",
     "nedb": "1.8.0",
+    "node-schedule": "1.2.0",
     "rxjs": "^5.0.3",
     "weixinbot": "git+https://github.com/alexayan/WeixinBot.git"
   },
